fixed issue with page not rendering on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -98,6 +98,14 @@ nav ul li {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }  
+
+  @media only screen and (max-width: 600px) {
+    background: linear-gradient(30deg, #c850c0, #ffcc70);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 5rem;
+    text-align: center;
+  } 
 }
 .anim {
   width: 99vw;
